# nexa-bidkit

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/commands/: checks.md  pr.md  release.md  rmbranch.md
.github/workflows/: ci.yml  publish.yml
examples/: 01_simple_hourly_bids.ipynb  02_block_bids.ipynb  03_merit_order_curves.ipynb  04_order_book_and_validation.ipynb
src/nexa_bidkit/: __init__.py  bids.py  curves.py  types.py  validation.py
tests/: test_bids.py  test_curves.py  test_types.py  test_validation.py
